2007-07-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder -toOneRelationshipKeys]): check whether we
	really should return something or if we fake to return nil...

2007-07-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser +initialize]): set
	acceptAnyUser to YES only when the SOGoAuthentificationMethod user
	default is set to "bypass".

	* SoObjects/SOGo/SOGoAuthenticator.m ([SOGoAuthenticator
	-checkLogin:_loginpassword:_pwd]): accepts unverified connections
	when authMethod is set to "bypass" from now on. This would avoid a
	security concern with a default installation of SOGo.
	AuthentificationMethod is now prefixed with "SOGo" for better
	clarity.

2007-07-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailFolderActions.m ([UIxMailFolderActions
	-quotasAction]): new method that returns a json representation of
	the mailbox quotas.

2007-07-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailBaseObject.m ([SOGoMailBaseObject
	-imap4URL]): rewrote method to support accented mailbox names.
	([SOGoMailBaseObject imap4Password]): rewrote to simply use
	SOGoAuthenticator's passwordInContext:.

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor
	-takeValuesFromRequest:_rqinContext:_ctx]): explicitly set the
	start and due dates to nil if hasStartDate and hasDueDate are
	false.

	* SoObjects/SOGo/SOGoAuthenticator.m ([SOGoAuthenticator
	-passwordInContext:context]): made method public.

	* OGoContentStore/OCSiCalFieldExtractor.m ([OCSiCalFieldExtractor
	-extractQuickFieldsFromTodo:_task]): set "isallday" and "isopaque"
	to false to avoid a null violation.

2007-07-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-contentAsString]): returns the message encoded in ISO Latin 1
	again.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser +initialize]): read the